Generate python and go SDKs for api version 0.0.2
