# go/integrations/model_accepted_response_body.go
@@ -1,9 +1,10 @@
 /*
 Klarity Integrations
 
-No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+REST API for managing Estate Records using Klarity Integrations. You can enrich your estate by creating new kinds of estate records or extending existing ones. Before making use of the API, you must first register your External Integration in Klarity, which provides you with the required authentication credentials. Then, you use those credentials to obtain a Token that allows you to make authorized calls to Klarity’s REST API for External Integration.
 
-API version: 0.0.1
+API version: 0.0.2
+Contact: products@nordcloud.com
 */
 
 // Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
