# python/integrations/klarity_integrations/model/costs.py
@@ -3,7 +3,7 @@
 
     REST API for managing Estate Records using Klarity Integrations. You can enrich your estate by creating new kinds of estate records or extending existing ones. Before making use of the API, you must first register your External Integration in Klarity, which provides you with the required authentication credentials. Then, you use those credentials to obtain a Token that allows you to make authorized calls to Klarity’s REST API for External Integration.  # noqa: E501
 
-    The version of the OpenAPI document: 0.0.1
+    The version of the OpenAPI document: 0.0.2
     Contact: products@nordcloud.com
     Generated by: https://openapi-generator.tech
 """
@@ -111,8 +111,12 @@ class Costs(ModelNormal):
 
     @classmethod
     @convert_js_args_to_python_args
-    def _from_openapi_data(cls, *args, **kwargs):  # noqa: E501
+    def _from_openapi_data(cls, currency, values, *args, **kwargs):  # noqa: E501
         """Costs - a model defined in OpenAPI
+
+        Args:
+            currency (str): Currency in ISO-4217 format.
+            values ([CostElement]):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -145,8 +149,6 @@ class Costs(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            currency (str): Currency in ISO-4217 format.. [optional]  # noqa: E501
-            values ([CostElement]): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
@@ -174,6 +176,8 @@ class Costs(ModelNormal):
         self._configuration = _configuration
         self._visited_composed_classes = _visited_composed_classes + (self.__class__,)
 
+        self.currency = currency
+        self.values = values
         for var_name, var_value in kwargs.items():
             if var_name not in self.attribute_map and \
                         self._configuration is not None and \
@@ -194,8 +198,12 @@ class Costs(ModelNormal):
     ])
 
     @convert_js_args_to_python_args
-    def __init__(self, *args, **kwargs):  # noqa: E501
+    def __init__(self, currency, values, *args, **kwargs):  # noqa: E501
         """Costs - a model defined in OpenAPI
+
+        Args:
+            currency (str): Currency in ISO-4217 format.
+            values ([CostElement]):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -228,8 +236,6 @@ class Costs(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            currency (str): Currency in ISO-4217 format.. [optional]  # noqa: E501
-            values ([CostElement]): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
@@ -255,6 +261,8 @@ class Costs(ModelNormal):
         self._configuration = _configuration
         self._visited_composed_classes = _visited_composed_classes + (self.__class__,)
 
+        self.currency = currency
+        self.values = values
         for var_name, var_value in kwargs.items():
             if var_name not in self.attribute_map and \
                         self._configuration is not None and \
