# python/integrations/klarity_integrations/model/estate_records_request_body_records.py
@@ -3,7 +3,7 @@
 
     REST API for managing Estate Records using Klarity Integrations. You can enrich your estate by creating new kinds of estate records or extending existing ones. Before making use of the API, you must first register your External Integration in Klarity, which provides you with the required authentication credentials. Then, you use those credentials to obtain a Token that allows you to make authorized calls to Klarity’s REST API for External Integration.  # noqa: E501
 
-    The version of the OpenAPI document: 0.0.1
+    The version of the OpenAPI document: 0.0.2
     Contact: products@nordcloud.com
     Generated by: https://openapi-generator.tech
 """
@@ -32,7 +32,17 @@ from klarity_integrations.exceptions import ApiAttributeError
 
 def lazy_import():
     from klarity_integrations.model.costs import Costs
+    from klarity_integrations.model.id import Id
+    from klarity_integrations.model.name import Name
+    from klarity_integrations.model.tags import Tags
+    from klarity_integrations.model.type import Type
+    from klarity_integrations.model.valid_through import ValidThrough
     globals()['Costs'] = Costs
+    globals()['Id'] = Id
+    globals()['Name'] = Name
+    globals()['Tags'] = Tags
+    globals()['Type'] = Type
+    globals()['ValidThrough'] = ValidThrough
 
 
 class EstateRecordsRequestBodyRecords(ModelNormal):
@@ -63,19 +73,6 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
     }
 
     validations = {
-        ('id',): {
-            'max_length': 255,
-        },
-        ('type',): {
-            'max_length': 255,
-        },
-        ('name',): {
-            'max_length': 255,
-        },
-        ('tags',): {
-            'max_items': 1000,
-            'max_properties': 1000,
-        },
     }
 
     @cached_property
@@ -101,12 +98,13 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
         """
         lazy_import()
         return {
-            'id': (str,),  # noqa: E501
-            'type': (str,),  # noqa: E501
-            'name': (str,),  # noqa: E501
+            'id': (Id,),  # noqa: E501
+            'type': (Type,),  # noqa: E501
+            'name': (Name,),  # noqa: E501
             'metadata': ({str: (bool, date, datetime, dict, float, int, list, str, none_type)},),  # noqa: E501
-            'tags': ({str: (str,)},),  # noqa: E501
+            'tags': (Tags,),  # noqa: E501
             'costs': (Costs,),  # noqa: E501
+            'valid_through': (ValidThrough,),  # noqa: E501
         }
 
     @cached_property
@@ -121,6 +119,7 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
         'metadata': 'metadata',  # noqa: E501
         'tags': 'tags',  # noqa: E501
         'costs': 'costs',  # noqa: E501
+        'valid_through': 'validThrough',  # noqa: E501
     }
 
     read_only_vars = {
@@ -134,8 +133,8 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
         """EstateRecordsRequestBodyRecords - a model defined in OpenAPI
 
         Args:
-            id (str): Internal ID of a resource.
-            type (str): Type of a resource (resourceType/extension) can contain just type, eg `jira` or with subtypes separated by \"/\" symbol.
+            id (Id):
+            type (Type):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -168,10 +167,11 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            name (str): Friendly name of a resource (id will be used, if not provided).. [optional]  # noqa: E501
+            name (Name): [optional]  # noqa: E501
             metadata ({str: (bool, date, datetime, dict, float, int, list, str, none_type)}): Metadata contains a JSON object with information about the record. Keys of the object can by any string value, excluding the `tags` key which is reserved for the tags property. If you want to clear the metadata key, you have to provide it directly in an object with a `null` value. Maximum object size is 1MB. . [optional]  # noqa: E501
-            tags ({str: (str,)}): Tags are key => value representing tags in Klarity. If you want to clear the tag key, you have to provide it directly in an object with a `null` value. Maximum object size is 1MB. . [optional]  # noqa: E501
+            tags (Tags): [optional]  # noqa: E501
             costs (Costs): [optional]  # noqa: E501
+            valid_through (ValidThrough): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
@@ -225,8 +225,8 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
         """EstateRecordsRequestBodyRecords - a model defined in OpenAPI
 
         Args:
-            id (str): Internal ID of a resource.
-            type (str): Type of a resource (resourceType/extension) can contain just type, eg `jira` or with subtypes separated by \"/\" symbol.
+            id (Id):
+            type (Type):
 
         Keyword Args:
             _check_type (bool): if True, values for parameters in openapi_types
@@ -259,10 +259,11 @@ class EstateRecordsRequestBodyRecords(ModelNormal):
                                 Animal class but this time we won't travel
                                 through its discriminator because we passed in
                                 _visited_composed_classes = (Animal,)
-            name (str): Friendly name of a resource (id will be used, if not provided).. [optional]  # noqa: E501
+            name (Name): [optional]  # noqa: E501
             metadata ({str: (bool, date, datetime, dict, float, int, list, str, none_type)}): Metadata contains a JSON object with information about the record. Keys of the object can by any string value, excluding the `tags` key which is reserved for the tags property. If you want to clear the metadata key, you have to provide it directly in an object with a `null` value. Maximum object size is 1MB. . [optional]  # noqa: E501
-            tags ({str: (str,)}): Tags are key => value representing tags in Klarity. If you want to clear the tag key, you have to provide it directly in an object with a `null` value. Maximum object size is 1MB. . [optional]  # noqa: E501
+            tags (Tags): [optional]  # noqa: E501
             costs (Costs): [optional]  # noqa: E501
+            valid_through (ValidThrough): [optional]  # noqa: E501
         """
 
         _check_type = kwargs.pop('_check_type', True)
