# python/integrations/klarity_integrations/models/__init__.py
@@ -13,5 +13,12 @@ from klarity_integrations.model.accepted_response_body import AcceptedResponseBo
 from klarity_integrations.model.cost_element import CostElement
 from klarity_integrations.model.costs import Costs
 from klarity_integrations.model.error_response import ErrorResponse
+from klarity_integrations.model.estate_records_delete_body import EstateRecordsDeleteBody
 from klarity_integrations.model.estate_records_request_body import EstateRecordsRequestBody
 from klarity_integrations.model.estate_records_request_body_records import EstateRecordsRequestBodyRecords
+from klarity_integrations.model.id import Id
+from klarity_integrations.model.name import Name
+from klarity_integrations.model.period_enum import PeriodEnum
+from klarity_integrations.model.tags import Tags
+from klarity_integrations.model.type import Type
+from klarity_integrations.model.valid_through import ValidThrough
